projetGL/src/test/deca/context/valid/provided/valide_27_simple.deca
{
    // Test 1: Déclarations de Variables Simples

    int a;
    float b = 3.14;
    boolean flag = true;
    int c, d, e = 10;

    // Assignations
    a = 5;
    d = a + e;
    e = e * 2;

    // Impressions des variables
    println("a: " , a);
    println("b: " , b);
    println("Hello, Deca!");
    println("c: " , c); // c n'est pas initialisé, peut afficher une valeur par défaut
    println("d: " , d);
    println("e: " , e);
}
