projetGL/src/test/deca/context/invalid/provided/01_invalid_cast_float_to_boolean.deca
{
    float f;
    boolean b;

    f = 3.14;

    // Erreur sémantique attendue : cast float -> boolean n'est pas autorisé
    b = (boolean)(f);

    println(b , "Ce message ne devrait pas s'afficher si le cast est refusé");
}
